[package]
name = "plane-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["i32"]
i32 = []
i64 = []
serde = ["dep:serde", "grid/serde"]



[dependencies]
grid = { version = "0.14.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }