[package]
name = "plane-2d"
version = "0.1.3"
authors = ["vil'mo"]
edition = "2021"
description = "Continuous 2D data structure representing infinite 2d plane."
keywords = ["data-structure-2D", "data-structure"]
categories = ["science", "data-structures"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vil-mo/plane-2d"
documentation = "https://docs.rs/plane-2d"



[features]
default = ["i32"]
i32 = []
i64 = []
serde = ["dep:serde", "grid/serde"]



[dependencies]
grid = { version = "0.14.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }