[package]
name = "plane-2d"
version = "0.1.5"
authors = ["vil'mo"]
edition = "2021"
description = "Continuous 2D data structure representing infinite 2d plane."
keywords = ["plane2d", "grid2d", "plane", "data-structure-2d", "data-structure"]
categories = ["science", "data-structures"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vil-mo/plane-2d"
documentation = "https://docs.rs/plane-2d"



[features]
default = ["i32"]
i32 = []
i64 = []
serde = ["dep:serde"]
bevy_reflect = ["dep:bevy_reflect"]



[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
bevy_reflect = { version = "0.14", optional = true }